--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
         
       <div class="btn">
         Pay
-	      <a href="upi://pay?pa=9749829896@ybl&pn=ATANU SAHA&cu=INR" id="__UPI_BUTTON__" style="background: #ff912f;border: 2px solid #8a4100;padding: 10px;text-decoration: none;color: white;font-size: larger;border-radius: 10px;">Pay using UPI</a>
+
+      </div> 
+	    <div class="btn">
+        <a href="upi://pay?pa=9749829896@ybl&pn=ATANU SAHA&cu=INR" id="__UPI_BUTTON__" style="background: #ff912f;border: 2px solid #8a4100;padding: 10px;text-decoration: none;color: white;font-size: larger;border-radius: 10px;">Pay using UPI</a>
+
 
       </div> 
       
