--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
           <i class="fas fa-lock"></i>
         </div>
       </div>
+       <div>
+		     OR
+      </div>
         
       
 	    <div class="btn">
